// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ng-update onboarding-flow migration adds TODO comment to tui-onboarding-flow about footer restructure: test.html 1`] = `
{
  "0. Before": "<tui-onboarding-flow [(index)]="index"><tui-onboarding-step *tuiItem>content</tui-onboarding-step></tui-onboarding-flow>",
  "1. After": "<!-- TODO: (Taiga UI migration) tui-onboarding-flow: In v5 action buttons must be moved OUT of individual <tui-onboarding-step> elements into a single shared <footer tuiFloatingContainer> as the last child of <tui-onboarding-flow>. Idiomatic v5 pattern: <tui-onboarding-flow [(index)]="index"><tui-onboarding-step *tuiItem>...</tui-onboarding-step><footer tuiFloatingContainer><button tuiButton (click)="index() < lastStep ? next() : observer.complete()">{{ index() < lastStep ? 'Next' : 'Done' }}</button></footer></tui-onboarding-flow>. Note: [index]="index()" (indexChange)="fn($event)" is backwards-compatible but [(index)]="index" (signal model) is the idiomatic v5 style. Also: mobile options changed from {fullscreen: true, appearance: 'onboarding'} to {appearance: 'fullscreen onboarding'}. See onboarding-flow documentation -->
<tui-onboarding-flow [(index)]="index"><tui-onboarding-step *tuiItem>content</tui-onboarding-step></tui-onboarding-flow>",
}
`;

exports[`ng-update onboarding-flow migration renames (tuiOnboardingChange) to (tuiResponsiveDialogChange): test.html 1`] = `
{
  "0. Before": "<ng-template [tuiOnboarding]="open" (tuiOnboardingChange)="onOpen($event)">content</ng-template>",
  "1. After": "<ng-template [tuiResponsiveDialog]="open" (tuiResponsiveDialogChange)="onOpen($event)">content</ng-template>",
}
`;

exports[`ng-update onboarding-flow migration renames [(tuiOnboarding)] to [(tuiResponsiveDialog)]: test.html 1`] = `
{
  "0. Before": "<ng-template [(tuiOnboarding)]="open">content</ng-template>",
  "1. After": "<ng-template [(tuiResponsiveDialog)]="open">content</ng-template>",
}
`;

exports[`ng-update onboarding-flow migration renames [tuiOnboardingOptions] to [tuiResponsiveDialogOptions]: test.html 1`] = `
{
  "0. Before": "<ng-template [(tuiOnboarding)]="open" [tuiOnboardingOptions]="options">content</ng-template>",
  "1. After": "<ng-template [(tuiResponsiveDialog)]="open" [tuiResponsiveDialogOptions]="options">content</ng-template>",
}
`;

exports[`ng-update onboarding-flow migration replaces TuiOnboardingDialogDirective import with TuiResponsiveDialog: test.ts 1`] = `
{
  "0. Before": "
                import {TuiOnboardingDialogDirective} from '@taiga-ui/proprietary';

                @Component({
                    standalone: true,
                    imports: [TuiOnboardingDialogDirective],
                    template: '',
                })
                export class TestComponent {}
            ",
  "1. After": "import { TuiResponsiveDialog } from "@taiga-ui/addon-mobile";

                                @Component({
                    standalone: true,
                    imports: [TuiResponsiveDialog],
                    template: '',
                })
                export class TestComponent {}
            ",
}
`;

exports[`ng-update onboarding-flow migration replaces TuiOnboardingFlowDialog import with TuiResponsiveDialog: test.ts 1`] = `
{
  "0. Before": "
                import {TuiOnboardingFlowDialog} from '@taiga-ui/proprietary';

                @Component({
                    standalone: true,
                    imports: [TuiOnboardingFlowDialog],
                    template: '',
                })
                export class TestComponent {}
            ",
  "1. After": "import { TuiResponsiveDialog } from "@taiga-ui/addon-mobile";

                                @Component({
                    standalone: true,
                    imports: [TuiResponsiveDialog],
                    template: '',
                })
                export class TestComponent {}
            ",
}
`;

exports[`ng-update onboarding-flow migration replaces TuiOnboardingFlowDialogService import with TuiResponsiveDialogService: test.ts 1`] = `
{
  "0. Before": "
                import {TuiOnboardingFlowDialogService} from '@taiga-ui/proprietary';

                @Component({standalone: true, template: ''})
                export class TestComponent {
                    constructor(private readonly dialogs: TuiOnboardingFlowDialogService) {}
                }
            ",
  "1. After": "import { TuiResponsiveDialogService } from "@taiga-ui/addon-mobile";

                                @Component({standalone: true, template: ''})
                export class TestComponent {
                    constructor(private readonly dialogs: TuiResponsiveDialogService) {}
                }
            ",
}
`;
